Added right click context menu and changed name from snapcloud to gitcloud
